prueba de cambio

--- a/Index.html
+++ b/Index.html
@@ -7,5 +7,6 @@
   </head>
   <body>
 <h1> Adelita Adelita </h1>
+<h6>Prueba para ver si las modificaciones se suben GitHub </h6>
   </body>
 </html>
