--- a/Index.html
+++ b/Index.html
@@ -2,11 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Proyecto EOI</title>
+    <title>Double G</title>
     <link rel="stylesheet" href="css/index.css">
   </head>
   <body>
-<h1> Adelita Adelita </h1>
-<h6>Prueba para ver si las modificaciones se suben GitHub </h6>
+<h1> Double G </h1>
   </body>
 </html>
