--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <link rel="stylesheet" href="css/index.css">
   </head>
   <body>
-<h1> Double G </h1>
+    <header>
+      <h1> Double G </h1>
+      <nav>
+        <a href="#home">Home</a>
+        <a href="#quienesSomos">Quienes somos</a>
+        <a href="#contacto">Contacto</a>
+
+      </nav>
+    </header>
   </body>
 </html>
