Nuevo div página

--- a/index.html
+++ b/index.html
@@ -14,20 +14,25 @@
         <a href="#contacto">Contacto</a>
       </nav>
     </header>
-    <section id="home">
-        <h2>Home</h2>
-        <!-- Poner vídeo youtube -->
-    </section>
-    <section id="quienesSomos">
-      <h2>Quienes somos</h2>
-      <pre>Double G es una empresa de origen canario con más dde 15 años de experiencia que nos dedicamos a la organización de eventos.
-      <strong>¡Conoce a nuestro equipo! </strong>
-      <!-- Enlace a RRSS -->
-      </pre>
-    </section>
-    <section id="contacto">
-      <h2>Contacto</h2>
-      <!-- Poner un formulario de contacto -->
-    </section>
+
+    <div class="pagina">
+      <section id="home">
+          <h2>Home</h2>
+          <!-- Poner vídeo youtube -->
+      </section>
+      <section id="quienesSomos">
+        <h2>Quienes somos</h2>
+        <pre>Double G es una empresa de origen canario con más dde 15 años de experiencia que nos dedicamos a la organización de eventos.
+        <strong>¡Conoce a nuestro equipo! </strong>
+        <!-- Enlace a RRSS -->
+        </pre>
+      </section>
+      <section id="contacto">
+        <h2>Contacto</h2>
+        <!-- Poner un formulario de contacto -->
+      </section>
+    </div>
+    
+    <script src="js/index.js" charset="utf-8"></script>
   </body>
 </html>
